# ros_posenet

./: .gitignore  CMakeLists.txt  README.md  camera_posenet.sh  kinect_posenet.sh  package.json  package.xml  setup.sh  start_posenet.sh
include/: camera.h
include/ros_posenet/: camera.h  kinect.h  realsense.h
launch/: camera.launch  kinect.launch  posenet.launch  realsense.launch
msg/: Keypoint.msg  Pose.msg
scripts/: model_server.py  pose_viewer.py  posenet.js  server.py  viewer.py
src/: camera.cpp  injection_pose.cpp  kinect.cpp  main.cpp  pose_centroid.cpp  realsense.cpp  viewer.cpp
